fixed portfolio card spacing issue on mobile.

--- a/src/components/Portfolio/_Portfolio.scss
+++ b/src/components/Portfolio/_Portfolio.scss
@@ -42,6 +42,7 @@
       }
       .project-container{ 
         margin: 20px 0px;
+        width: 100%;
       }
     }
   }
